--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@socket.io/redis-adapter": "^7.2.0",
     "dockerode": "^3.3.2",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "redis": "^4.2.0",
     "socket.io": "^4.5.1",
     "ts-jest": "^28.0.5"
