--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
